oci/linkerd/policies/core-linkerd-control-plane-policies.yaml
---
# AuthZ for all webhooks (v1alpha1)
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: proxy-injector-webhook
  namespace: linkerd
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: proxy-injector-webhook
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kube-api-server
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: sp-validator-webhook
  namespace: linkerd
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: sp-validator-webhook
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kube-api-server
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: policy-validator-webhook
  namespace: linkerd
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: policy-validator-webhook
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kube-api-server
